# FUDS_experiments

./: .pre-commit-config.yaml  CEO_eval.py  CEO_eval_time.py  EO_eval.py  EO_eval_time.py  GE_eval.py  GE_eval_time.py  Kamiran_eval.py  Kamiran_eval_time.py  LFR_eval.py  LFR_eval_time.py  LR_eval.py  LR_eval_time.py  META_eval.py  META_eval_time.py  README.md  RW_eval.py  RW_eval_time.py  pyproject.toml
fuds/: CEO_eval.py  CEO_eval_time.py  EO_eval.py  EO_eval_time.py  GE_eval.py  GE_eval_time.py  GE_geo_shift.py  Kamiran_eval.py  Kamiran_eval_time.py  LFR_eval.py  LFR_eval_time.py  LR_eval.py  LR_eval_time.py  META_eval.py  META_eval_time.py  RW_eval.py  RW_eval_time.py  utilties.py
