[tool.poetry]
name = "fuds"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
aif360 = "^0.4.0"
tensorflow = "^2.7.0"
folktables = "^0.0.11"
ethicml = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
